--- a/src/pages/Home/index.scss
+++ b/src/pages/Home/index.scss
@@ -1,32 +1,42 @@
-@import "~scss/variables";
+@import '~scss/variables';
 
-.contentOuter{
+.contentOuter {
   background-color: $background-color-lighter;
 }
-.content{
+.content {
   position: relative;
-  height: $main-height;
+  min-height: $main-height;
   margin: 0 auto;
   width: $content-width;
+  .homeLoad {
+    position: absolute;
+    top: 0;
+    left: 192px;
+    background-color: #fff;
+    & > div {
+      top: 100px;
+    }
+  }
   .nav {
     position: absolute;
     top: 0;
     left: 0;
     width: $nav-width;
     height: 100%;
-    border-right: 2px solid $border;
   }
   .apps {
-    margin-left: 288px;
-    padding-bottom: 95px;
+    margin-left: 192px;
+    padding-left: 94px;
+    padding-bottom: 64px;
+    min-height: calc(100vh - #{$footer-height});
+    border-left: 2px solid $border;
   }
-  &.fixNav {
-    height: auto;
-    .nav {
-      position: fixed;
-      top: $header-height;
-      left: auto;
-      height: 100%;
-    }
+}
+.fixNav {
+  div[class*='_nav'] {
+    position: fixed;
+    top: $header-height;
+    left: auto;
+    height: $main-height;
   }
 }
