--- a/src/pages/Admin/Apps/Deploy/Cell/index.scss
+++ b/src/pages/Admin/Apps/Deploy/Cell/index.scss
@@ -1,49 +1,59 @@
 @import "~scss/variables";
 
-.header {
-  margin: 24px 0;
-  a {
-    line-height: 20px;
-    font-weight: 500;
-    color: $title-color;
-    transition: color .3s ease-in-out;
-    &:hover {
-      color: lighten($title-color, 20%);
-    }
-  }
-}
 
-form.createForm {
-  display: block;
-  margin: -20px 0 20px 24px;
-  .moduleTitle{
-    margin: 50px 0 25px 0;
-    font-size: 16px;
-    font-weight: bold;
-    color: $title-color;
-  }
-  .cellModule{
-    margin-bottom: 18px;
-    clear: both;
-  }
+.cell {
   .name{
     display: inline-block;
     float: left;
     margin-right: 16px;
     width: 130px;
+    line-height: 1.2;
     font-size: 14px;
-    line-height: 32px;
     font-weight: bold;
     color: $title-color;
     text-align: right;
+    word-wrap: break-word;
+    word-break: break-word;
   }
-  .showWord{
-    width: 540px;
+  .inputName{
     line-height: 32px;
   }
-
+  .showWord{
+    width: 570px;
+  }
+  .rightShow{
+    margin-top: 7px;
+    margin-left: 146px;
+    width: 570px;
+  }
+  .note{
+    font-size: 12px;
+    color: #626466;
+  }
+  /*input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+  }
+  input[type="number"]{
+    -moz-appearance: textfield;
+  }*/
+  .input{
+    width: 276px;
+  }
+  .inputSmall{
+    width: 70px;
+    margin-left: 10px;
+  }
+  .inputTitle{
+    display: inline-block;
+    margin: 8px 10px 3px 0;
+    width: 183px;
+    font-size: 12px;
+  }
   .radio,.checkbox{
     margin-right: 20px;
+    line-height: 1.2;
+    float: left;
   }
   .add{
     display: inline-block;
@@ -65,17 +75,8 @@ form.createForm {
       border: 1px solid $border-dark;
     }
   }
-
-  .rightShow{
-    margin-top: 7px;
-    margin-left: 170px;
-  }
-  .note{
-    font-size: 12px;
-    color: #626466;
-  }
   .submitBtnGroup{
-    padding: 24px 0 8.5px 146px;
+    padding: 24px 0 8.5px 160px;
     margin-bottom: 0;
     border-top: 1px solid #dadcde;
     button{
