fixed:create repo create runtime(bugs: dashboard in docker #108)

--- a/src/components/TodoList/index.scss
+++ b/src/components/TodoList/index.scss
@@ -1,22 +1,21 @@
 .list{
-  margin-top: 10px;
-  margin-left: 140px;
+  margin-left: 150px;
   line-height: 14px;
   .item{
-    width: 360px;
-    max-width: 70%;
+    width: 380px;
     line-height: 20px;
-    clear: both;
-    margin: 10px 0;
-
+    margin-bottom: 10px;
     span {
       display: inline-block;
       width: 80%;
       margin-left: 10px;
     }
+    .inputSmall{
+      width: 138px;
+      margin-right: 10px;
+    }
   }
   .removeBtn{
-    float: right;
-    padding: 2px;
+    font-weight: bold;
   }
 }
