modify todolist remove botton

--- a/src/pages/Admin/Repos/Add/index.scss
+++ b/src/pages/Admin/Repos/Add/index.scss
@@ -44,6 +44,8 @@ form.createForm {
   .add{
     display: inline-block;
     font-weight: bold;
+  }
+  .addBottom{
     margin-left: 150px;
   }
   .select{
