--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -51,10 +51,8 @@ form.createForm {
     display: inline-block;
     font-weight: bold;
   }
-  .addLabel{
-    display: inline-block;
+  .addBottom{
     margin-left: 150px;
-    font-weight: bold;
   }
   .select{
     width: 86px;
