--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -20,6 +20,10 @@ form.createForm {
     color: $title-color;
     text-align: right;
   }
+  .fl{
+    float: left;
+    line-height: 32px;
+  }
   .input{
     width: 280px;
   }
@@ -46,6 +50,9 @@ form.createForm {
   .add{
     display: inline-block;
     font-weight: bold;
+  }
+  .addBottom{
+    margin-left: 150px;
   }
   .select{
     width: 86px;
