--- a/src/components/Nav/index.scss
+++ b/src/components/Nav/index.scss
@@ -20,19 +20,19 @@
       margin: 16px 0;
       line-height: 16px;
       list-style: none;
-      cursor: pointer;
-      &.current {
-        /*box-shadow: 1px 0 0 0 $third-text-color;*/
-        border-right: 2px solid $border-dark;
-        a{
-          color: $third-text-color;
-        }
-      }
+      //cursor: pointer;
+
       a {
+        display:inline-block;
+        width:100%;
         color: $second-text-color;
         transition: color .3s ease-in;
         &:hover {
           color: $third-text-color;
+        }
+
+        &.current {
+          border-right: 2px solid $border-dark;
         }
       }
     }
