upgrade: page delete、search、refresh、pagination methods

--- a/src/components/Layout/Admin/index.scss
+++ b/src/components/Layout/Admin/index.scss
@@ -12,6 +12,15 @@
       color: $title-color;
     }
   }
+  .detailTab{
+    position: absolute;
+    top: 150px;
+    left: 384px;
+    background-color: #fff;
+    & > div {
+      top: 100px;
+    }
+  }
 }
 
 
