--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -37,7 +37,7 @@
   position: absolute;
   z-index: 11;
   width: 100%;
-  max-height: 200px;
+  //max-height: 200px;
   margin-top: 2px;
   border-radius: 3px;
   border: solid 1px $border;
