1.fixed review issues 2.fixed runtime、repo edit page refresh data loss

--- a/src/pages/Admin/Overview/ClusterList/index.scss
+++ b/src/pages/Admin/Overview/ClusterList/index.scss
@@ -12,7 +12,7 @@
     float:left;
     margin-top: 10px;
     width: 20px;
-    heith: 20px;
+    height: 20px;
     border-radius: 50%;
   }
   .word{
