--- a/src/components/Card/CardTitle/index.scss
+++ b/src/components/Card/CardTitle/index.scss
@@ -10,6 +10,7 @@
     display: none;
     float: right;
     font-size: 12px;
+    font-weight: normal;
     color: $title-color;
     cursor: pointer;
   }
