--- a/src/components/UserInfo/TotalCard/index.scss
+++ b/src/components/UserInfo/TotalCard/index.scss
@@ -15,6 +15,10 @@
   &:last-child {
     margin-right: 0;
   }
+  &:hover {
+    transform: translate3d(0, -5px, 0);
+    box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
+  }
   .name {
     height: 24px;
     font-size: 14px;
