--- a/src/pages/Admin/Overview/AppList/index.scss
+++ b/src/pages/Admin/Overview/AppList/index.scss
@@ -7,6 +7,12 @@
     padding: 13px 6px 9px 16px;
     height: 60px;
     border-bottom: 1px solid $border-gray-li;
+    &:hover{
+      background-color: $li-hover-bg;
+      a{
+        color: $link-hover;
+      }
+    }
   }
   .order{
     display: inline-block;
