--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -30,8 +30,11 @@ $purple-word: #1c062f;
 
 $background-color: #f6f6f8;
 $background-color-lighter: #ffffff;
-$th-background-color: #f1edf6;
+$th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
+$li-hover-bg: rgba(243,229,255,.23);
+$link-hover: #7a2ac0;
+$tr-hover-bg: rgba(243,229,255,.23);
 
 $family-sans-serif: "Roboto", "PingFang SC", "Lantinghei SC", "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", 微软雅黑, STHeitiSC-Light, simsun, 宋体, "WenQuanYi Zen Hei", "WenQuanYi Micro Hei", sans-serif;
 $family-monospace: Inconsolata,Consolas,Monaco,monospace;
