--- a/src/pages/Admin/Overview/RepoList/index.scss
+++ b/src/pages/Admin/Overview/RepoList/index.scss
@@ -5,10 +5,17 @@
   li{
     box-sizing: border-box;
     margin-bottom: 2px;
-    padding: 13px 20px 13px 16px;
     height: 56px;
     border-radius: 3px;
     border: 1px solid $border-gray-li;
+    &:hover {
+      transform: translate3d(0, -1px, 0);
+      box-shadow: 1px 1px 0 0 rgba(48, 14, 86, 0.08), 0 1px 1px 0 rgba(48, 14, 86, 0.04), 0 1px 1px 0 rgba(48, 14, 86, 0.16), 0 0 1px 1px  rgba(48, 14, 86, 0.04);
+    }
+    a{
+      display: block;
+      padding: 13px 20px 13px 16px;
+    }
     .icon{
       float: left;
       margin-right: 4px;
