update favicon and logo

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -68,7 +68,6 @@ $border-gray-li: #e6ecf2;
 // Animation
 $transition-speed: .3s;
 
-
 $content-width: 1128px;
 $nav-width: 192px;
 $header-height: 48px;
@@ -86,3 +85,6 @@ $login-submit-bg: linear-gradient(to left, #f0ab0d, #e68b22);
 $login-submit-hover-bg: linear-gradient(to left, #f0ab0d, #e68b22);
 $login-submit-active-bg: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), linear-gradient(to left, #f0ab0d, #e68b22);
 $login-placeholder: #c9bed6;
+
+$logo-width: 142px;
+$logo-height: 21px;
