--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -14,6 +14,8 @@
   }
   
   .logo {
+    width: $logo-width;
+    height: $logo-height;
     display: inline-block;
     margin-top: $header-height / 2;
     transform: translateY(-50%);
