--- a/src/components/TabsNav/index.scss
+++ b/src/components/TabsNav/index.scss
@@ -1,8 +1,11 @@
 @import "~scss/variables";
 
 .tabs {
+  position: fixed;
+  top: 48px;
+  z-index: 999;
   height: 48px;
-  margin-bottom: 24px;
+  width: 100%;
   background-color: #ffffff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.04);
   .tabsList {
