--- a/src/pages/Login/index.scss
+++ b/src/pages/Login/index.scss
@@ -1,8 +1,10 @@
 @import '~scss/variables';
 
+$input-item-width: 320px;
+$input-item-height: 48px;
+
 .login {
   min-height: 100vh;
-  padding-top: 100px;
   padding-bottom: 50px;
   background-image: $login-bg;
 }
@@ -10,18 +12,19 @@
 .loginTitle {
   display: block;
   text-align: center;
+  padding-top: 249.6px;
 }
 
 .loginForm {
-  width: 460px;
-  margin: 125px auto 0;
-  padding: 44px 50px 8px 50px;
+  width: 410px;
+  margin: 40.6px auto 0;
+  padding: 48px 45px;
   text-align: center;
   border-radius: 8px;
   background-color: $login-form-bg;
   box-shadow: $login-form-shadow;
   h1 {
-    margin-bottom: 44px;
+    margin-bottom: 24px;
     color: $title-color;
     font-size: 24px;
     font-weight: 500;
@@ -29,15 +32,19 @@
   .formItem {
     text-align: left;
     &:nth-of-type(1) {
-      margin-bottom: 28px;
+      margin-bottom: 12px;
     }
     &:nth-of-type(2) {
-      margin-bottom: 18px;
+      margin-bottom: 22px;
     }
     &:nth-of-type(3) {
-      margin-bottom: 26px;
+      margin-bottom: 24px;
+    }
+    &:nth-of-type(4) {
+      margin-bottom: 0;
     }
   }
+
   .formInput {
     i {
       font-size: 18px;
@@ -45,10 +52,9 @@
       color: $login-placeholder;
     }
     input {
-      width: 360px;
-      height: 48px;
+      width: $input-item-width;
+      height: $input-item-height;
       padding: 15px 15px 15px 56px;
-      border: solid 1px $border;
       border: 1px solid $border-lighter;
       border-radius: 24px;
       box-shadow: none;
@@ -79,7 +85,8 @@
 }
 
 .submitBtn {
-  width: 360px;
+  width: $input-item-width;
+  height: $input-item-height;
   padding: 14px 0;
   border-radius: 24px;
   border: none !important;
