- upgrade statistics store data - table data id modify name - upgrade catalog page search function - add table id copy

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -77,7 +77,9 @@
       border-bottom: 1px solid $border-lighter;
       transition: all $transition-speed;
       word-wrap:break-word;
-
+      a{
+        color: $title-color;
+      }
       &:first-child {
         //padding-left: 0;
         //border-left: 48px solid #fff;
