[wip] client side add react-i18n backend - jest mock react-i18n - refine locales json files - fix server auth and render-page middleware - update src/index import i18n config - using dynamic import, webpack code splitting

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -78,7 +78,8 @@
           padding: 5px;
           a{
             display: inline-block;
-            width: 80%;
+            font-size: 12px;
+            width: 100%;
             color: $third-text-color;
           }
         }
