--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -36,6 +36,8 @@ $li-hover-bg: rgba(243,229,255,.23);
 $link-hover: #7a2ac0;
 $tr-hover-bg: rgba(243,229,255,.23);
 
+$delete-btn: #ac4949;
+
 $family-sans-serif: "Roboto", "PingFang SC", "Lantinghei SC", "Helvetica Neue", Helvetica, Arial, "Microsoft YaHei", 微软雅黑, STHeitiSC-Light, simsun, 宋体, "WenQuanYi Zen Hei", "WenQuanYi Micro Hei", sans-serif;
 $family-monospace: Inconsolata,Consolas,Monaco,monospace;
 $body-size: 14px;
