--- a/src/components/DetailCard/index.scss
+++ b/src/components/DetailCard/index.scss
@@ -22,6 +22,10 @@
       font-size: 24px;
       font-weight: 500;
       color: $text-color;
+      max-width: 290px;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
     }
     .id,.caId{
       margin: 8px 0 10px;
@@ -63,6 +67,12 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
+      a{
+        color: $text-color;
+      }
+      &:hover a{
+        color: $link-hover;
+      }
     }
     .name{
       display: inline-block;
@@ -75,5 +85,21 @@
       margin-top: -18px;
       margin-left: 134px;
     }
+  }
+}
+.copyId{
+  margin: 8px 0 10px;
+  line-height: 14px;
+  font-size: 12px;
+  color: $grey-word;
+}
+
+:global{
+  .fa-clipboard{
+    //float: right;
+    margin-left: 5px;
+    font-size: 12px;
+    color: $title-color;
+    cursor: pointer;
   }
 }
