--- a/src/components/Rectangle/index.scss
+++ b/src/components/Rectangle/index.scss
@@ -6,12 +6,14 @@
   padding: 24px;
   width: 360px;
   height: 240px;
-  cursor: pointer;
   background-color: #ffffff;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
   &:hover {
     //transform: translate3d(0, -10px, 0);
     box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
+    .title a{
+      color: $link-color;
+    }
   }
   .title a{
     display: block;
@@ -21,9 +23,10 @@
     line-height: 1.0;
     text-align: left;
     color: #333333;
-    &:hover{
-      color: $title-color
-    }
+    max-width: 300px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
   .idShow{
     margin-bottom: 17px;
@@ -37,5 +40,7 @@
     line-height: 17px;
     color: $grey-word;
     overflow: hidden;
+    word-wrap: break-word;
+    word-break: break-all;
   }
 }
