--- a/src/components/RepoCard/index.scss
+++ b/src/components/RepoCard/index.scss
@@ -7,6 +7,12 @@
   border-radius: 3px;
   background-color: #ffffff;
   box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  &:hover{
+    box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
+    .titleName a{
+      color: $link-hover;
+    }
+  }
   .inner {
     height: 75px;
   }
@@ -31,7 +37,9 @@
     font-size: 20px;
     font-weight: 500;
     text-align: left;
-    color: $title-color;
+    a{
+      color: $title-color;
+    }
   }
   .description {
     height: 34px;
