--- a/src/components/Statistics/Progress/index.scss
+++ b/src/components/Statistics/Progress/index.scss
@@ -4,15 +4,17 @@
   display: inline-block;
   position: relative;
   bottom: 3px;
-  width: 320px;
+  margin-left: 20px;
+  width: 250px;
   height: 7px;
   background-color: #e2d0f2;
   .inner{
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 2;
     height: 7px;
+    cursor: pointer;
     &:nth-child(1){
       background-color: #300e56;
     }
@@ -26,8 +28,46 @@
       background-color: #e2d0f2;
     }
     &:nth-child(5){
-      background-color: #300e56;
+      background-color: #e2e3e5;
+    }
+    &:hover .tips{
+      display: inline-block;
     }
   }
-
+  .tips{
+    position: relative;
+    bottom: 58px;
+    display: none;
+    min-width: 110px;
+    height: 50px;
+    padding: 8px 12px 10px;
+    border-radius: 2px;
+    background-color: #301255;
+    box-shadow: 0 2px 4px 0 rgba(48, 14, 86, 0.32);
+    .arrow{
+      position: absolute;
+      bottom: -6px;
+      left: 10px;
+      border-top: 6px solid #301255;
+      border-left: 4px solid transparent;
+      border-right: 4px solid transparent;
+    }
+    .number{
+      margin-bottom: 4px;
+      line-height: 14px;
+      font-size: 12px;
+      font-weight: 500;
+      color: #ffffff;
+    }
+    .name{
+      max-width: 90px;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap ;
+      line-height: 14px;
+      font-size: 12px;
+      color: #bfb3cd;
+    }
+  }
 }
+
