--- a/src/pages/Admin/Runtimes/Add/index.scss
+++ b/src/pages/Admin/Runtimes/Add/index.scss
@@ -2,10 +2,19 @@
 
 form.createForm {
   display: block;
-  padding: 44px 0 23px 0;
+  padding: 36px 0 24px 0;
 
   &>div{
     margin-bottom: 24px;
+  }
+  &>.showDiv{
+    margin-bottom: 10px;
+    .rightShow{
+      margin-top: 7px;
+    }
+    .showValue{
+      color: $text-color;
+    }
   }
 
   .name{
@@ -39,6 +48,7 @@ form.createForm {
     margin: 8px 10px 3px 0;
     width: 183px;
     font-size: 12px;
+    color: #626466;
   }
   .inputMiddle{
     width: 183px;
