upgrade table loading style

--- a/src/pages/Admin/Clusters/Detail/index.scss
+++ b/src/pages/Admin/Clusters/Detail/index.scss
@@ -28,6 +28,14 @@
       }
     }
   }
+  .total{
+    margin: 0 24px;
+    padding: 16px 0;
+    border-top: 1px solid $border-lighter;
+  }
+}
+.clear{
+  clear: both;
 }
 .wrapper2 {
   position: relative;
