--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -15,7 +15,17 @@
     margin: -3em 0 0 -3em;
   }
 }
-
+.loadTable{
+  position: static;
+  background-color: #fff;
+  .loadOuter{
+    position: static;
+    padding: 30px 0 50px;
+    .loader {
+      margin: 0 auto;
+    }
+  }
+}
 .loadOuter {
   .loader,
   .loader:after {
@@ -23,7 +33,6 @@
     width:6em;
     height:6em;
   }
-
   .loader {
     margin:60px auto;
     font-size:10px;
@@ -39,7 +48,6 @@
     -webkit-animation:load 1.1s infinite linear;
     animation:load 1.1s infinite linear;
   }
-
 }
 
 @mixin load-frames() {
