--- a/src/pages/Admin/Overview/Panel/index.scss
+++ b/src/pages/Admin/Overview/Panel/index.scss
@@ -18,7 +18,6 @@
   &:hover {
     box-shadow: 0 2px 8px 0 rgba(48, 14, 86, 0.08), 0 2px 10px 0 rgba(48, 14, 86, 0.04), 0 6px 20px 0 rgba(48, 14, 86, 0.16), 0 0 16px 0 rgba(48, 14, 86, 0.04);
   }
-
   .title {
     margin-bottom: 16px;
     line-height: 14px;
@@ -32,6 +31,69 @@
       color: $title-color;
     }
   }
-
-
+}
+.normal{
+  position: relative;
+  padding: 30px 16px 0 16px;
+  height: 416px;
+  .title {
+    margin-bottom: 24px;
+    line-height: 32px;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .image{
+    margin-right: 12px;
+  }
+  .button{
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    button {
+      font-weight: bold;
+    }
+  }
+}
+.blankList{
+  position: relative;
+  display: block;
+  float: left;
+  box-sizing: border-box;
+  margin: 0 24px 24px 0;
+  padding: 0 30px;
+  width: 360px;
+  height: 416px;
+  overflow: hidden;
+  border-radius: 3px;
+  background-color: #fff;
+  box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
+  text-align: center;
+  &:last-child {
+    margin-right: 0;
+  }
+  img{
+    margin: 60px 0 30px;
+  }
+  .title{
+    margin-bottom: 12px;
+    line-height: 32px;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .description{
+    font-size: 14px;
+    line-height: 1.71;
+    text-align: center;
+    color: #adadad;
+  }
+  .button{
+    position: absolute;
+    bottom: 60px;
+    left: 50%;
+    transform: translate(-50%, 0);
+    button {
+      font-weight: bold;
+    }
+  }
 }
