--- a/src/pages/Admin/Overview/RepoList/index.scss
+++ b/src/pages/Admin/Overview/RepoList/index.scss
@@ -9,8 +9,14 @@
     border-radius: 3px;
     border: 1px solid $border-gray-li;
     &:hover {
-      transform: translate3d(0, -1px, 0);
-      box-shadow: 1px 1px 0 0 rgba(48, 14, 86, 0.08), 0 1px 1px 0 rgba(48, 14, 86, 0.04), 0 1px 1px 0 rgba(48, 14, 86, 0.16), 0 0 1px 1px  rgba(48, 14, 86, 0.04);
+      background-color: $tr-hover-bg;
+      box-shadow: 1px 1px 0 0 rgba(48, 14, 86, 0.08),
+      0 1px 1px 0 rgba(48, 14, 86, 0.04),
+      0 1px 1px 0 rgba(48, 14, 86, 0.16),
+      0 0 1px 1px  rgba(48, 14, 86, 0.04);
+      a{
+        color: $link-hover;
+      }
     }
     a{
       display: block;
@@ -49,5 +55,11 @@
 .reposBg{
   li {
     background-color: $li-bg;
+  }
+}
+.runtimeBg{
+  li{
+    margin-bottom: 8px;
+    height: 60px;
   }
 }
