--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -1,5 +1,11 @@
 @import "~scss/variables";
 
+%spinner-basic {
+  border-radius:50%;
+  width:6em;
+  height:6em;
+}
+
 .loading {
   position: fixed;
   top: $header-height;
@@ -8,13 +14,39 @@
   right: 0;
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.2);
+
   .loadOuter{
     position: absolute;
     top: 50%;
     left: 50%;
     margin: -3em 0 0 -3em;
+
+    .loader {
+      @extend %spinner-basic;
+      &:after {
+        @extend %spinner-basic
+      }
+
+      margin:60px auto;
+      font-size:10px;
+      position:relative;
+      text-indent:-9999em;
+      border-top:0.3em solid rgba($purple-light,0.2);
+      border-right:0.3em solid rgba($purple-light,0.2);
+      border-bottom:0.3em solid rgba($purple-light,0.2);
+      border-left:0.3em solid rgba($purple-light,1);
+
+      //-webkit-transform: translateZ(0);
+      //-ms-transform: translateZ(0);
+      transform: translateZ(0);
+
+      //-webkit-animation:load 1.1s infinite linear;
+
+      animation:load 1.1s infinite linear;
+    }
   }
 }
+
 .loadTable{
   position: static;
   background-color: #fff;
@@ -24,29 +56,6 @@
     .loader {
       margin: 0 auto;
     }
-  }
-}
-.loadOuter {
-  .loader,
-  .loader:after {
-    border-radius:50%;
-    width:6em;
-    height:6em;
-  }
-  .loader {
-    margin:60px auto;
-    font-size:10px;
-    position:relative;
-    text-indent:-9999em;
-    border-top:0.3em solid rgba($purple-light,0.2);
-    border-right:0.3em solid rgba($purple-light,0.2);
-    border-bottom:0.3em solid rgba($purple-light,0.2);
-    border-left:0.3em solid rgba($purple-light,1);
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation:load 1.1s infinite linear;
-    animation:load 1.1s infinite linear;
   }
 }
 
