--- a/src/pages/Admin/Repos/Detail/index.scss
+++ b/src/pages/Admin/Repos/Detail/index.scss
@@ -86,3 +86,15 @@
 .ml12{
   margin-left: 12px;
 }
+.modalContent{
+  .noteWord{
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
+  .operation{
+    text-align: center;
+    button{
+      margin: 0 6px;
+    }
+  }
+}
