--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -1,5 +1,11 @@
 @import "~scss/variables";
 
+%spinner-basic {
+  border-radius:50%;
+  width:6em;
+  height:6em;
+}
+
 .loading {
   position: fixed;
   top: $header-height;
@@ -8,47 +14,53 @@
   right: 0;
   z-index: 99;
   background-color: rgba(255, 255, 255, 0.2);
+
   .loadOuter{
     position: absolute;
     top: 50%;
     left: 50%;
     margin: -3em 0 0 -3em;
-  }
-}
-.loadTable{
-  position: static;
-  background-color: #fff;
-  .loadOuter{
-    position: static;
-    padding: 30px 0 50px;
+
     .loader {
-      margin: 0 auto;
+      @extend %spinner-basic;
+      &:after {
+        @extend %spinner-basic
+      }
+
+      margin:60px auto;
+      font-size:10px;
+      position:relative;
+      text-indent:-9999em;
+      border-top:0.3em solid rgba($purple-light,0.2);
+      border-right:0.3em solid rgba($purple-light,0.2);
+      border-bottom:0.3em solid rgba($purple-light,0.2);
+      border-left:0.3em solid rgba($purple-light,1);
+
+      //-webkit-transform: translateZ(0);
+      //-ms-transform: translateZ(0);
+      transform: translateZ(0);
+
+      //-webkit-animation:load 1.1s infinite linear;
+
+      animation:load 1.1s infinite linear;
     }
   }
 }
-.loadOuter {
-  .loader,
-  .loader:after {
-    border-radius:50%;
-    width:6em;
-    height:6em;
-  }
-  .loader {
-    margin:60px auto;
-    font-size:10px;
-    position:relative;
-    text-indent:-9999em;
-    border-top:0.3em solid rgba($purple-light,0.2);
-    border-right:0.3em solid rgba($purple-light,0.2);
-    border-bottom:0.3em solid rgba($purple-light,0.2);
-    border-left:0.3em solid rgba($purple-light,1);
-    -webkit-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-animation:load 1.1s infinite linear;
-    animation:load 1.1s infinite linear;
+
+:global {
+  .loadTable{
+    position: static;
+    background-color: #fff;
+    .loadOuter{
+      position: static;
+      padding: 30px 0 50px;
+      .loader {
+        margin: 0 auto;
+      }
+    }
   }
 }
+
 
 @mixin load-frames() {
   0% {
