--- a/src/pages/AppDetail/index.scss
+++ b/src/pages/AppDetail/index.scss
@@ -60,6 +60,12 @@
       font-weight: 500;
       color: $title-color;
     }
+    .description{
+      line-height: 24px;
+      font-size: 14px;
+      letter-spacing: 0;
+      color: #576075;
+    }
     .information{
       padding-bottom: 30px;
       dl{
@@ -71,10 +77,80 @@
         display: inline-block;
         width: 120px;
         color: #667380;
+        font-weight: normal;
       }
       dd{
         display: inline-block;
         color: #667380;
+      }
+    }
+  }
+  .slider{
+    position: relative;
+    .pre,.next{
+      position: absolute;
+      display: inline-block;
+      width: 18px;
+      height: 30px;
+      bottom: 80px;
+      cursor: pointer;
+    }
+    .pre{
+      left: 10px;
+    }
+    .next{
+      right: 10px;
+    }
+    .dotList{
+      position: absolute;
+      bottom: -35px;
+      left: 0;
+      width: 100%;
+      text-align: center;
+      .dot{
+        display: inline-block;
+        margin: 0 6px;
+        width: 6px;
+        height: 6px;
+        border-radius: 3px;
+        background-color: $grey;
+        cursor: pointer;
+      }
+      .active{
+        width: 44px;
+        background-color: $link-hover;
+      }
+    }
+    .listOuter{
+      position: relative;
+      margin: 40px 40px 70px;
+      height: 220px;
+      overflow: hidden;
+      .pictureList{
+        position: absolute;
+        left: 0;
+        bottom:0;
+        width: 1200px;
+      }
+    }
+    .pictureOuter{
+      float: left;
+      width: 270px;
+      height: 213px;
+      background-color: #eff0f5;
+      margin-right: 6px;
+      .picture{
+        margin: 20px 25px;
+        width: 220px;
+        height: 170px;
+        border-radius: 3px;
+        box-shadow: 0 2px 10px 1px rgba(20, 8, 32, 0.2);
+        background: #2f0d56;
+
+        color: red;
+        text-align: center;
+        line-height: 170px;
+        font-size: 30px;
       }
     }
   }
