[WIP] integrate lego-ui icon graphy update scss structure, add partial files

--- a/src/components/Base/Icon/index.scss
+++ b/src/components/Base/Icon/index.scss
@@ -1,28 +1,28 @@
-@import '~scss/variables';
+@import '~scss/vars';
 
-@font-face {
-  font-family: 'PiFont';
-  src:  url('/assets/fonts/pifont/PiFont.eot?9g0pk3');
-  src:  url('/assets/fonts/pifont/PiFont.eot?9g0pk3#iefix') format('embedded-opentype'),
-    url('/assets/fonts/pifont/PiFont.ttf?9g0pk3') format('truetype'),
-    url('/assets/fonts/pifont/PiFont.woff?9g0pk3') format('woff'),
-    url('/assets/fonts/pifont/PiFont.svg?9g0pk3#PiFont') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
+//@font-face {
+//  font-family: 'PiFont';
+//  src:  url('/assets/fonts/pifont/PiFont.eot?9g0pk3');
+//  src:  url('/assets/fonts/pifont/PiFont.eot?9g0pk3#iefix') format('embedded-opentype'),
+//    url('/assets/fonts/pifont/PiFont.ttf?9g0pk3') format('truetype'),
+//    url('/assets/fonts/pifont/PiFont.woff?9g0pk3') format('woff'),
+//    url('/assets/fonts/pifont/PiFont.svg?9g0pk3#PiFont') format('svg');
+//  font-weight: normal;
+//  font-style: normal;
+//}
 
 :global {
-  [class^="icon-"], [class*=" icon-"] {
-    font-family: 'PiFont' !important;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+  //[class^="icon-"], [class*=" icon-"] {
+  //  font-family: 'PiFont' !important;
+  //  font-style: normal;
+  //  font-weight: normal;
+  //  font-variant: normal;
+  //  text-transform: none;
+  //  line-height: 1;
+  //
+  //  -webkit-font-smoothing: antialiased;
+  //  -moz-osx-font-smoothing: grayscale;
+  //}
 
   .icon {
     display: inline-block;
@@ -30,42 +30,43 @@
     vertical-align: middle;
   }
 
-  .icon-logo:before {
-    content: "\e900";
-  }
-  .icon-create:before {
-    content: "\e901";
-  }
-  .icon-history:before {
-    content: "\e902";
-  }
-  .icon-search:before {
-    content: "\e903";
-  }
-  .icon-modify:before {
-    content: "\e904";
-  }
-  .icon-refresh:before {
-    content: "\e905";
-  }
-  .icon-arrow-down:before {
-    content: "\e906";
-  }
-  .icon-close:before {
-    content: "\e907";
-  }
-  .icon-more:before {
-    content: "\e908";
-  }
-  .icon-check:before {
-    content: "\e909";
-  }
-  .icon-establish:before {
-    content: "\e910";
-    color: #24b36b;
-  }
-  .icon-stop:before {
-    content: "\e911";
-    color: #cc5252;
-  }
+  //.icon-logo:before {
+  //  content: "\e900";
+  //}
+  //.icon-create:before {
+  //  content: "\e901";
+  //}
+  //.icon-history:before {
+  //  content: "\e902";
+  //}
+  //.icon-search:before {
+  //  content: "\e903";
+  //}
+  //.icon-modify:before {
+  //  content: "\e904";
+  //}
+  //.icon-refresh:before {
+  //  content: "\e905";
+  //}
+  //.icon-arrow-down:before {
+  //  content: "\e906";
+  //}
+  //.icon-close:before {
+  //  content: "\e907";
+  //}
+  //.icon-more:before {
+  //  content: "\e908";
+  //}
+  //.icon-check:before {
+  //  content: "\e909";
+  //}
+  //.icon-establish:before {
+  //  content: "\e910";
+  //  color: #24b36b;
+  //}
+  //.icon-stop:before {
+  //  content: "\e911";
+  //  color: #cc5252;
+  //}
+
 }
